# PSP

./: .gitignore  CMakeLists.txt  Hotels.db  client_main.cc  generateDTB.py  logs.txt  requirements.txt  server_main.cc
Backend/: main.py
Backend/Domain/: Booking.py  Client.py  IBookingRepository.py  IClientRepository.py  IRoomRepository.py  IUserRepository.py  Room.py  user.py
Backend/Repositories/: BookingRepository.py  ClientRepository.py  Repository.py  RoomRepository.py  UserRepository.py
Backend/Services/: AdminServices.py  ClientServices.py  EmployeeServices.py  IAdminServices.py  IClientServices.py  IEmployeeServices.py
Frontend/: main.py
Frontend/Controllers/: ClientController.py  UserController.py
Frontend/models/: Translator.py
Frontend/views/: ClientView.py  userview.py
database/: Hotels.db
gui/: ClientGUI.cc  CreateRoomDialog.cc  DeleteRoomDialog.cc  EmployeeGUI.cc  LogInDialog.cc  ReadRoomDialog.cc  UpdateRoomDialog.cc
gui/include/: ClientGUI.h  CreateRoomDialog.h  DeleteRoomDialog.h  EmployeeGUI.h  LogInDialog.h  ReadRoomDialog.h  UpdateRoomDialog.h
gui/ui/ClientUI/: ClientGUI.ui
gui/ui/EmployeeUI/: CreateRoomGUI.ui  DeleteRoomGUI.ui  EmployeeGUI.ui  LogInGUI.ui  ReadRoomGUI.ui  UpdateRoomGUI.ui
include/: admin.h  administrator.h  angajat.h  client.h  clientS.h  connection.h  employee.h  hotel.h  message.h  room.h  server.h  user.h
mains/: client_main.cc  employeePresenter.cc  employee_main.cc  server_main.cc
misc/: DatabaseContent.txt  Diagrams.mdj  generateDTB.py  logs.txt
src/: client.cc  clientS.cc  connection.cc  employee.cc  hotel.cc  room.cc  server.cc  user.cc
